--- a/style.css
+++ b/style.css
@@ -132,3 +132,29 @@ cosmic latte: #FFF8E7;
 .music-player {
 
 }
+
+
+/* CYBER WORLD */
+
+.cyber-body {
+  
+  background-color: black;
+ 
+}
+
+.cyber-body h1 {
+  font-family: monospace;
+  color:rgb(30, 185, 30);
+  
+}
+
+.cyber-body h1::before {
+  position: absolute;
+  content: 'F U T U R E ';
+  left:420px;
+  filter:blur(2px);
+}
+
+.space {
+  margin:0 10px;
+}
